# localconvert-app

./: .cursorrules  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
docs/screenshots/: SCREENSHOTS_NEEDED.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: pdf_text_edit.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  converter.rs  lib.rs  main.rs  pdf_text_editor.rs  tools.rs  types.rs
src/components/: ConversionPanel.tsx  FileCard.tsx  FileDropZone.tsx  FileList.tsx  Header.tsx  HistoryModal.tsx  ImageComparePreview.tsx  ImagePreviewModal.tsx  PresetsSelector.tsx  PrivacyBadge.tsx  ScheduleModal.tsx  SettingsModal.tsx  Sidebar.tsx  ToolsSetupModal.tsx  VideoTrimmer.tsx  WatchFoldersModal.tsx  WelcomeScreen.tsx
src/components/PdfEditor/: FormFieldsOverlay.tsx  PageThumbnails.tsx  PdfEditor.tsx  PdfViewer.tsx  TextOverlay.tsx  Toolbar.tsx  index.ts  types.ts
src/components/PdfEditor/hooks/: useFabricCanvas.ts  usePdfDocument.ts
src/components/PdfEditor/services/: pdfSaveService.ts
src/hooks/: useKeyboardShortcuts.ts
src/store/: useStore.ts
src/types/: formats.ts
src/utils/: sounds.ts
